# hed-task

./: .codeclimate.yml  .env.example  .gitignore  .pre-commit-config.yaml  CODE_CLIMATE_SETUP.md  COGNITIVE_ATLAS_PROCESSING.md  Dockerfile  LICENSE  Makefile  PROJECT_SETUP.md  PUBMED_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  SETUP_FIXES.md  SUMMARY_CHANGES_1.md  Summary.md  citation_summary.tsv  docker-compose.yml  process_cognitive_atlas_tasks.py  pyproject.toml  run_task_processing.py  security-report.json  setup.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: PROJECT_SETUP.md  README.md  api_info.md  api_reference.md  cognitive_atlas_tutorial.md  development.md  quickstart.md
examples/: basic_usage.py  cognitive_atlas_collection.py
scripts/: demo_article_id_parsing.py  demo_citation_function.py  simulate_pubmed_download.py  start_api.py  test_citation_processing.py  test_collection.py  test_pubmed_download.py
src/: get_task_info.py
src/hed_task/: __init__.py  api.py  citation_summary.py  cli.py  cognitive_atlas_collector.py  config.py  download_pubmed.py  summarize_citations.py  task_collector.py
tests/: conftest.py  test_api.py  test_cli.py
